--- a/web/style.css
+++ b/web/style.css
@@ -5,8 +5,10 @@
 }
 
 .separator {
-    height: 5px;
-    width: 100%;
+    margin: 10px 10px 10px 25%;
+    height: 3px;
+    width: 50%;
+    background-color: black;
 }
 
 .menu {
@@ -15,28 +17,85 @@
     border: 2px solid red;
 }
 
+.log_container>h1 {
+    text-align: center;
+    padding: 5px 5px 5px 5px;
+}
+
 .log {
     align-self: center;
     height: 300px;
     width: 100%;
-    row-gap: 5px;
     display: grid;
-    grid-template-areas: "a" "b" "c" "d" "e" "f" "g" "h" "i" "j";
+    grid-template-areas: "a""b""c""d""e""f""g""h""i""j""k";
 }
 
 .tutut_log {
-    border: 2px solid red;
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-areas: "1 3";
 }
 
-#log1 {grid-area: a;}
-#log2 {grid-area: b;}
-#log3 {grid-area: c;}
-#log4 {grid-area: d;}
-#log5 {grid-area: e;}
-#log6 {grid-area: f;}
-#log7 {grid-area: g;}
-#log8 {grid-area: h;}
-#log9 {grid-area: i;}
-#log10 {grid-area: j;}
+#log1 {
+    grid-area: a;
+    background-color: lightgrey;
+}
+
+#log2 {
+    grid-area: b;
+}
+
+#log3 {
+    grid-area: c;
+    background-color: lightgrey;
+}
+
+#log4 {
+    grid-area: d;
+}
+
+#log5 {
+    grid-area: e;
+    background-color: lightgrey;
+}
+
+#log6 {
+    grid-area: f;
+}
+
+#log7 {
+    grid-area: g;
+    background-color: lightgrey;
+}
+
+#log8 {
+    grid-area: h;
+}
+
+#log9 {
+    grid-area: i;
+    background-color: lightgrey;
+}
+
+#log10 {
+    grid-area: j;
+}
+
+#log11 {
+    grid-area: k;
+    background-color: lightgrey;
+}
+
+.tutut_log>div {
+    padding: 4px 6px;
+}
+
+#log1>div {
+    border: 1px solid black;
+    padding: 4px 5px;
+}
+
+#log2>div {
+    margin-top: 2px;
+}
