--- a/frontend/style.css
+++ b/frontend/style.css
@@ -244,7 +244,7 @@ body {
 
 #controls {
     margin: auto;
-    width: 18%;
+    width: 250px;
     height: 30px;
     display: flex;
     justify-content: center;
