--- a/utils/refont/style.css
+++ b/utils/refont/style.css
@@ -1,49 +1,50 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 
 body {
-    background-color: #082032;
-    font-family: 'Roboto', sans-serif;
-    color: white;
+  background-color: #082032;
+  font-family: "Roboto", sans-serif;
+  color: white;
 }
 
 header {
-    margin: auto;
-    width: 80%;
-    height: 3rem;
-    background-color: #2C394B;
-    font-size: 2rem;
-    padding-left: 1rem;
-    padding-top: 0.5rem;
+  margin: auto;
+  width: 80%;
+  height: 3rem;
+  background-color: #2c394b;
+  font-size: 2rem;
+  padding-left: 1rem;
+  padding-top: 0.5rem;
 }
 
 #separator {
-    height: 50px;
+  height: 50px;
 }
 
 main {
-    margin: auto;
-    width: 80%;
-    background-color: #2C394B;
+  margin: auto;
+  width: 80%;
+  background-color: #2c394b;
 }
 
 #tiles_container {
-    margin: auto;
-    width: 95%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin: auto;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 #tile {
-    margin: auto;
-    width: 350px;
-    height: 200px;
-    background-color: #334756;
-    border-radius: 5px;
-    transition: box-shadow 0.3s ease-in-out;
+  margin: auto;
+  width: 350px;
+  height: 200px;
+  background-color: #334756;
+  border-radius: 5px;
+  transition: box-shadow 0.3s ease-in-out;
+  cursor: url("cursor.cur"), pointer;
 }
 
 #tile:hover {
-    box-shadow: 0 0 15px white;
+  box-shadow: 0 0 15px white;
 }
