--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,313 +1,324 @@
 @font-face {
-    font-family: roboto;
-    src: url(Roboto-Medium.ttf);
+  font-family: roboto;
+  src: url(Roboto-Medium.ttf);
 }
 
 body {
-    background-color: rgb(22, 22, 29);
-    font-family: roboto;
-    color: lightgrey;
+  background-color: rgb(22, 22, 29);
+  font-family: roboto;
+  color: lightgrey;
 }
 
 .title {
-    height: 50px;
-    width: 100%;
-    font-size: 50px;
-    text-align: center;
-    padding-bottom: 20px;
+  height: 50px;
+  width: 100%;
+  font-size: 50px;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 .separator {
-    margin: 10px 10px 10px 25%;
-    height: 1px;
-    width: 50%;
-    background-color: rgb(185, 185, 185);
+  margin: 10px 10px 10px 25%;
+  height: 1px;
+  width: 50%;
+  background-color: rgb(185, 185, 185);
 }
 
 .trug {
-    margin: auto;
-    width: 350px;
-    display: flex;
-    justify-content: center;
-    padding-bottom: 5px;
+  margin: auto;
+  width: 350px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 5px;
 }
 
 /* Style for dropdown button */
 .dropbtn {
-    min-width: 300px;
-    background-color: #5d5fd6;
-    color: white;
-    padding: 10px;
-    font-size: 15px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+  min-width: 300px;
+  background-color: #5d5fd6;
+  color: white;
+  padding: 10px;
+  font-size: 15px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 /* Style for dropdown content */
 .dropdown-content {
-    min-width: 300px;
-    display: none;
-    /* Hidden by default */
-    position: absolute;
-    background-color: #8a8bd3;
-    color: beige;
-    min-width: 85px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    cursor: pointer;
+  min-width: 300px;
+  display: none;
+  /* Hidden by default */
+  position: absolute;
+  background-color: #8a8bd3;
+  color: beige;
+  min-width: 85px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  cursor: pointer;
 }
 
 /* Style for each content div */
 .dropdown-content div {
-    min-width: 298px;
-    padding: 10px 0px 10px 0px;
-    text-align: center;
-    border: 1px solid #8a8bd3;
+  min-width: 298px;
+  padding: 10px 0px 10px 0px;
+  text-align: center;
+  border: 1px solid #8a8bd3;
 }
 
 /* Highlight dropdown options on hover */
 .dropdown-content div:hover {
-    color: beige;
-    background-color: #7173ca;
-    border: 1px solid black;
+  color: beige;
+  background-color: #7173ca;
+  border: 1px solid black;
 }
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
-    display: block;
+  display: block;
 }
 
 /* Highlight dropdown button when dropdown menu is open */
 .dropdown:hover .dropbtn {
-    background-color: #474885;
-    border-radius: 5px 5px 0px 0px;
+  background-color: #474885;
+  border-radius: 5px 5px 0px 0px;
 }
 
 #refresh_div {
-    margin: auto;
-    height: 37.2px;
-    width: 37.2px;
-    background-color: #5d5fd6;
-    cursor: pointer;
-    border-radius: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  margin: auto;
+  height: 37.2px;
+  width: 37.2px;
+  background-color: #5d5fd6;
+  cursor: pointer;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #refresh_div:hover {
-    animation-name: refresh;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
+  animation-name: refresh;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
 }
 
 @keyframes refresh {
-    from {
-        transform: rotate(0deg);
-    }
+  from {
+    transform: rotate(0deg);
+  }
 
-    to {
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 .button {
-    margin: auto;
-    background-color: rgb(68, 68, 90);
-    border-radius: 10px;
-    text-align: center;
+  margin: auto;
+  background-color: rgb(68, 68, 90);
+  border-radius: 10px;
+  text-align: center;
 }
 
 #log_table {
-    width: 90%;
-    margin: auto;
-    justify-content: center;
-    border-collapse: collapse
+  width: 90%;
+  margin: auto;
+  justify-content: center;
+  border-collapse: collapse;
 }
 
-#log_table>.tr>.th {
-    text-align: left;
+#log_table > .tr > .th {
+  text-align: left;
 }
 
 #log_hd {
-    background-color: rgb(180, 180, 180);
-    color: black;
-    border-bottom: 4px solid rgb(22, 22, 29);
+  background-color: rgb(180, 180, 180);
+  color: black;
+  border-bottom: 4px solid rgb(22, 22, 29);
 }
 
-#Name, #Date, #Time, #Serie {
-    border-left: 1px solid rgb(22, 22, 29);
+#Name,
+#Date,
+#Time,
+#Serie {
+  border-left: 1px solid rgb(22, 22, 29);
 }
 
 #div_chart_tutut_pie {
-    width: 100%;
-    min-height: 500px;
-    position: relative;
-    display: block;
-    margin: auto;
-    color: lightgrey;
+  width: 100%;
+  min-height: 500px;
+  position: relative;
+  display: block;
+  margin: auto;
+  color: lightgrey;
 }
 
 #div_chart_tutut_week {
-    height: 50vh;
-    width: 80vw;
-    position: relative;
-    display: block;
-    margin: auto;
-    color: lightgrey;
+  height: 50vh;
+  width: 80vw;
+  position: relative;
+  display: block;
+  margin: auto;
+  color: lightgrey;
 }
 
 #div_chart_tutut_day {
-    height: 50vh;
-    width: 80vw;
-    position: relative;
-    display: block;
-    margin: auto;
-    color: lightgrey;
+  height: 50vh;
+  width: 80vw;
+  position: relative;
+  display: block;
+  margin: auto;
+  color: lightgrey;
 }
 
 #div_chart_tutut_min {
-    height: 50vh;
-    width: 80vw;
-    position: relative;
-    display: block;
-    margin: auto;
-    color: lightgrey;
+  height: 50vh;
+  width: 80vw;
+  position: relative;
+  display: block;
+  margin: auto;
+  color: lightgrey;
 }
 
 #div_dyn_chart {
-    height: 30vh;
-    width: 80vw;
-    position: relative;
-    display: block;
-    margin: auto;
-    color: lightgrey;
+  height: 35vh;
+  width: 80vw;
+  position: relative;
+  display: block;
+  margin: auto;
+  color: lightgrey;
 }
 
 #progression {
-    margin: auto;
-    width: 80%;
-    height: 20px;
+  margin: auto;
+  width: 80%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+#current_day {
+  margin: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 #controls {
-    margin: auto;
-    width: 250px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    border: 2px solid grey;
-    border-radius: 5px;
+  margin: auto;
+  width: 250px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  border: 2px solid grey;
+  border-radius: 5px;
 }
 
-#controls>div {
-    height: 30px;
-    width: 30px;
-    cursor: pointer;
-    background-size: 100%;
+#controls > div {
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
+  background-size: 100%;
 }
 
 #reset {
-    background-image: url(media_icons/media-back.svg);
+  background-image: url(media_icons/media-back.svg);
 }
 
 #slower {
-    background-image: url(media_icons/media-forward.svg);
-    transform: rotate(180deg);
+  background-image: url(media_icons/media-forward.svg);
+  transform: rotate(180deg);
 }
 
 #play {
-    background-image: url(media_icons/media-play.svg);
+  background-image: url(media_icons/media-play.svg);
 }
 
 #faster {
-    background-image: url(media_icons/media-forward.svg);
+  background-image: url(media_icons/media-forward.svg);
 }
 
 #skip {
-    background-image: url(media_icons/media-back.svg);
-    transform: rotate(180deg);
+  background-image: url(media_icons/media-back.svg);
+  transform: rotate(180deg);
 }
 
 .page-selector {
-    padding-bottom: 15px;
-    margin: auto;
-    width: 30%;
-    height: 50px;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    margin-top: 20px;
-    align-items: center;
+  padding-bottom: 15px;
+  margin: auto;
+  width: 30%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 20px;
+  align-items: center;
 }
 
 .page-number {
-    width: 75px;
-    min-width: 75px;
-    height: 1em;
-    text-align: center;
-    color: #c9bdb8;
-    font-size: 18px;
+  width: 75px;
+  min-width: 75px;
+  height: 1em;
+  text-align: center;
+  color: #c9bdb8;
+  font-size: 18px;
 }
 
 #arrow-right {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .arrow {
-    border: 1px solid rgb(22, 22, 29);
+  border: 1px solid rgb(22, 22, 29);
 }
 
 .arrow:hover {
-    border: 1px solid #c9bdb8;
+  border: 1px solid #c9bdb8;
 }
 
 #tiles_container {
-    margin: auto;
-    width: 95%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    gap: 20px;
+  margin: auto;
+  width: 95%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .tile {
-    width: 350px;
-    height: 200px;
-    min-width: 325px;
-    min-height: 200px;
-    background-color: #334756;
-    border-radius: 5px;
-    transition: box-shadow 0.3s ease-in-out;
-    cursor: url("cursor.cur"), pointer;
+  width: 350px;
+  height: 200px;
+  min-width: 325px;
+  min-height: 200px;
+  background-color: #334756;
+  border-radius: 5px;
+  transition: box-shadow 0.3s ease-in-out;
+  cursor: url("cursor.cur"), pointer;
 }
 
 .tile:hover {
-    box-shadow: 0 0 15px white;
+  box-shadow: 0 0 15px white;
 }
 
 .tile_title {
-    margin: auto;
-    padding-top: 10px;
-    margin-bottom: 40px;
-    text-align: center;
-    font-size: 1.5rem;
+  margin: auto;
+  padding-top: 10px;
+  margin-bottom: 40px;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
 .data {
-    margin-top: 10px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  margin-top: 10px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-.data>.name {
-    width: 25%;
+.data > .name {
+  width: 25%;
 }
 
-.data>.value {
-    padding-left: 5%;
+.data > .value {
+  padding-left: 5%;
 }
