--- a/frontend/src/style/font.css
+++ b/frontend/src/style/font.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: roboto;
-    src: url(../../static/Roboto-Medium.ttf);
+    src: url(./Roboto-Medium.ttf);
 }
 
 html {
